added close poll api as well as get poll metrics api
